# world-cup-2026-predictor

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
data/processed/: master_features.parquet  team_snapshot_clustered.parquet
data/raw/areezvisram12_fixture/: teams.csv
data/raw/kanchana1990_transfermarkt/Football_Player_Market_Value_Trajectories/: data_dictionary.csv  transfermarkt_player_values.parquet  transfermarkt_value_history.csv
models/: model_features.json  xgb_match_predictor.pkl
notebooks/01_eda/: 01_eda_results.ipynb
notebooks/02_features/: 02_feature_engineering.ipynb  02_feature_matrix.ipynb  playoff_predictions_2026_03_31.ipynb
notebooks/03_unsupervised/: 03_clustering.ipynb
notebooks/04_modeling/: 04_supervised_modeling.ipynb
notebooks/05_simulation/: 05_monte_carlo.ipynb
outputs/predictions/: playoff_predictions_2026_03_31.csv  simulation_results.csv  tournament_probabilities.csv
world_cup_2026/: __init__.py  config.py  dataset.py  features.py  plots.py
world_cup_2026/data_ingestion/: download.py  normalize.py
world_cup_2026/features/: elo.py  form.py  h2h.py
world_cup_2026/modeling/: predict.py  train.py
world_cup_2026/simulation/: simulate.py
